# bartender

./: LICENSE  README.md  babel.config.js  package.json
src/: App.vue  apolloClient.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/graphql/: ingredients.graphql  recipes.graphql  schema.json
src-tauri/src/: cache.rs  cmd.rs  config.rs  main.rs
src/components/: Homepage.vue  Navbar.vue  ProgressBar.vue  Pump.vue  VolumeSelector.vue
src/components/steps/: Step1.vue  Step2.vue
src/graphql/: recipes.gql
src/pages/: Homepage.vue  Recipe.vue  Settings.vue
src/pages/steps/: Step1.vue  Step3.vue
src/routes/: index.js
src/utils/: interval.js
