[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0.57"
serde = { version = "1.0.114", features = [ "derive" ] }
tauri = { version = "0.9.1", features = [ "all-api" ] }
graphql_client = "*"
reqwest = { version = "0.10.7", features = [ "json" ] }
futures = "0.3"
tokio = { version = "0.2.22", features = [ "full", "tracing" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1.11"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "app"
path = "src/main.rs"
